PTN PTN PTN j'ai réussi à faire fonctionner docker !!!! (que le front)

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
 
         # Servir les fichiers statiques
         location /static/ {
-            alias /app/static/;
+            alias /frontend/static/;
         }
 
         # Passer les requêtes à Gunicorn
